# db

./: README.md  main.py  pyproject.toml  scratch.py
src/: get_vacancy.py  utils.py
