[tool.poetry]
name = "database-project"
version = "0.1.0"
description = ""
authors = ["Ilya Gaifullin proskmax@yandex.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"
psycopg2 = "^2.9.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"